--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
     <application
         android:allowBackup="true"
+        android:name=".BaseApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
@@ -20,6 +21,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".ShowActivity"/>
+        <receiver android:name=".utils.GTimeTaskUtil$AlarmReceiver">
+            <intent-filter>
+                <action android:name="gzp1124.alarm.service"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
