--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,13 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <!--微信-->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
 
     <application
         android:allowBackup="true"
@@ -21,6 +28,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".ShowActivity"/>
+        <activity android:name=".wxapi.WXEntryActivity"
+            android:exported="true">
+        </activity>
+
         <receiver android:name=".utils.GTimeTaskUtil$AlarmReceiver">
             <intent-filter>
                 <action android:name="gzp1124.alarm.service"/>
