--- a/lib_ui/build.gradle
+++ b/lib_ui/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.example.gzp1124.testgutils"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -20,11 +19,8 @@ android {
 }
 
 dependencies {
-    compile project(':lib_gutils')
-    compile project(':lib_log')
-    compile project(':lib_ui')
-
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-
+    compile 'com.nineoldandroids:library:2.4.0'
 }
