--- a/testgutils/src/main/AndroidManifest.xml
+++ b/testgutils/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.gzp1124.testgutils">
+    package="com.gzp1124.testgutils">
 
     <application
         android:allowBackup="true"
