--- a/lib_ui/build.gradle
+++ b/lib_ui/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.android.support:support-v4:24.0.0'
     compile 'com.android.support:design:24.0.0'
 }
