--- a/lib_gutils/build.gradle
+++ b/lib_gutils/build.gradle
@@ -19,8 +19,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile files('libs/libammsdk.jar')
     compile 'com.google.zxing:core:3.2.1'
+    compile files('libs/pinyin4j-2.5.0.jar')
+    compile files('libs/xstream-1.4.7.jar')
 }
