--- a/lib_gutils/src/main/AndroidManifest.xml
+++ b/lib_gutils/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <!--微信-->
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -15,6 +16,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /><!--SD卡-->
     <uses-permission android:name="android.permission.VIBRATE" /><!--震动-->
     <uses-permission android:name="android.permission.FLASHLIGHT" /><!--手电筒-->
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
 
     <application
         android:allowBackup="true"
