--- a/testgutils/build.gradle
+++ b/testgutils/build.gradle
@@ -32,4 +32,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
 
+
+    //动画依赖包
+    compile 'com.daimajia.androidanimations:library:1.1.3@aar'
+
 }
